fix: fix full-size layout broken and responsive breakpoints

--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -73,10 +73,11 @@
   .about-comment-wrapper::after {
     height: 580px;
     width: 580px;
+    right: -8%;
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1280px) {
   .about-container {
     padding: 0 60px;
     margin-top: 80px;
@@ -91,7 +92,7 @@
     height: 500px;
     width: 500px;
     top: -20%;
-    right: -5%;
+    right: 0%;
   }
 
   .about-comment {
