--- a/src/sections/Cooperation/Cooperation.css
+++ b/src/sections/Cooperation/Cooperation.css
@@ -32,7 +32,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) {
   .cooperation-images {
     width: 100%;
     display: grid;
